--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "novelgenerator",
+  "name": "FictionForge",
+  "description": "FictionForge - your AI-powered novel writing studio",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,12 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@google/genai": "^1.1.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "@google/genai": "^1.1.0"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
     "typescript": "~5.7.2",
     "vite": "^6.2.0"
   }
